--- a/style.css
+++ b/style.css
@@ -136,6 +136,8 @@ body {
   margin-left: 85px;
   width: 50%;
 }
+
+
 .slider-txt h1 {
   font-size: 70px;
   color: #FFFFFF;
@@ -196,6 +198,8 @@ body {
   cursor: pointer;
   color: #A7A7A7;
   font-weight: 700;
+  font-size: 18px;
+  text-transform: uppercase;
   transition: background ease 0.2s;
 }
 
@@ -214,6 +218,10 @@ body {
 .tabs input[type="radio"]:checked + label {
   border-bottom: 2px solid #db251b;
   color: #FFFFFF;
+}
+
+.tabs input[type="radio"]:checked + label + .tab {
+  display: block;
 }
 
 .product {
@@ -459,8 +467,7 @@ body {
   }
 
 
-
-
+  
   .swiper-horizontal > .swiper-pagination-bullets,
   .swiper-pagination-bullets, .swiper-pagination-horizontal,
   .swiper-pagination-custom,
@@ -469,7 +476,7 @@ body {
   }
 
   .tabs {
-    padding: 50px 30px;
+    padding: 50px 20px;
   }
 
   .tabs label{
